# global-sunshine

./: aylerror.py  边缘测试.py
shi/: CMakeLists.txt
shi/src/: config.h  config.txt  cuda_core.cu  cuda_core.cuh  main.cpp  raster.cpp  raster.h  sunshine_hours.cpp  sunshine_hours.h  timer.h
